Fix `kubernetes_label` example in docs (#55189)

--- a/docs/pages/enroll-resources/kubernetes-access/controls.mdx
+++ b/docs/pages/enroll-resources/kubernetes-access/controls.mdx
@@ -1046,7 +1046,7 @@ version: v7
 spec:
   allow:
     kubernetes_labels:
-      - "region": "us-east-2"
+      "region": "us-east-2"
     kubernetes_resources:
       - kind: pod
         namespace: "development"
