--- a/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/disaster-recovery.mdx
+++ b/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/disaster-recovery.mdx
@@ -77,9 +77,9 @@ to plan your backup procedure.
 <details>
 <summary>AWS Key Management Service users</summary>
 
-If the Teleport Auth Service in your cluster uses Amazon Key Management Service
-for certificate authority private keys, you must replicate your keys to the new
-AWS region before reinstalling the `teleport-cluster` Helm chart. See the [AWS
+If the Teleport Auth Service in your cluster uses AWS Key Management Service for
+certificate authority private keys, you must replicate your keys to the new AWS
+region before reinstalling the `teleport-cluster` Helm chart. See the [AWS
 documentation](https://docs.aws.amazon.com/kms/latest/developerguide/multi-region-keys-overview.html")
 for information about using KMS keys in multiple regions. 
 
