--- a/docs/pages/enroll-resources/database-access/database-access.mdx
+++ b/docs/pages/enroll-resources/database-access/database-access.mdx
@@ -24,7 +24,7 @@ agent services.
 
 ## Getting started
 
-- [Database Access Getting Started Guide](./getting-started.mdx): Getting started with Teleport database access and AWS Aurora PostgreSQL.
+- [Getting Started Guide](./getting-started.mdx): Getting started with Teleport database access and AWS Aurora PostgreSQL.
 
 ## Guides
 
@@ -37,10 +37,10 @@ agent services.
 
 ## Configuration & management
 
-- [Database Access Controls](./rbac.mdx): Role-based access control (RBAC) for Teleport database access.
+- [Access Controls](./rbac.mdx): Role-based access control (RBAC) for Teleport database access.
 - [Using the Teleport Database Service (section)](./guides/): Guides to possibilities for running the Teleport Database Service.
 
 ## Troubleshooting & support
 
-- [Database Access FAQ](./faq.mdx): Frequently asked questions about Teleport database access.
-- [Troubleshooting Database Access](./troubleshooting.mdx): Common issues and resolutions for Teleport's Database Access
+- [FAQ](./faq.mdx): Frequently asked questions about Teleport database access.
+- [Troubleshooting](./troubleshooting.mdx): Common issues and resolutions for Teleport's Database Access
