--- a/docs/pages/enroll-resources/desktop-access/desktop-access.mdx
+++ b/docs/pages/enroll-resources/desktop-access/desktop-access.mdx
@@ -3,6 +3,9 @@ title: Windows Desktops
 description: Guides to protecting Windows desktops with Teleport
 ---
 
+The guides in this section explain how to protect Windows desktops with
+Teleport.
+
 ## Getting started
 
 - [Manage Access to Windows Resources](./introduction.mdx): Demonstrates how you can manage access to Windows desktops with Teleport.
@@ -20,4 +23,5 @@ description: Guides to protecting Windows desktops with Teleport
 
 ## Troubleshooting & support
 
-- [Troubleshooting Desktop Access](./troubleshooting.mdx): Common issues and resolutions for Teleport's desktop access
+- [Troubleshooting](./troubleshooting.mdx): Common issues and resolutions for
+  protecting Windows desktops with Teleport.
