--- a/docs/pages/enroll-resources/kubernetes-access/kubernetes-access.mdx
+++ b/docs/pages/enroll-resources/kubernetes-access/kubernetes-access.mdx
@@ -3,6 +3,9 @@ title: Kubernetes Clusters
 description: Guides to protecting Kubernetes clusters with Teleport
 ---
 
+The guides in this section explain how to protect Kubernetes clusters with
+Teleport.
+
 ## Getting started
 
 - [Introduction to Enrolling Kubernetes Clusters](./introduction.mdx): Learn how Teleport can protect your Kubernetes clusters with RBAC, audit logging, and more.
@@ -15,9 +18,11 @@ description: Guides to protecting Kubernetes clusters with Teleport
 
 ## Configuration & management
 
-- [Teleport Kubernetes Access Controls](./controls.mdx): How the Teleport Kubernetes Service applies RBAC to manage access to Kubernetes
+- [Access Controls](./controls.mdx): How the Teleport Kubernetes Service applies RBAC to manage access to Kubernetes
 
 ## Troubleshooting & support
 
-- [Kubernetes Access FAQ](./faq.mdx): Frequently asked questions about Teleport Kubernetes Access
-- [Kubernetes Access Troubleshooting](./troubleshooting.mdx): Troubleshooting common issues with Kubernetes access
+- [FAQ](./faq.mdx): Frequently asked questions about
+  protecting Kubernetes clusters with Teleport.
+- [Troubleshooting](./troubleshooting.mdx): Troubleshooting
+  common issues with protecting Kubernetes clusters with Teleport.
