--- a/docs/pages/enroll-resources/server-access/server-access.mdx
+++ b/docs/pages/enroll-resources/server-access/server-access.mdx
@@ -3,14 +3,17 @@ title: Linux Servers
 description: Guides to protecting Linux servers with Teleport, including OpenSSH servers.
 ---
 
+The guides in this section explain how to protect Linux servers with
+Teleport.
+
 ## Getting started
 
 - [Introduction to Enrolling Servers](./introduction.mdx): Teleport server access features and introduction.
-- [Server Access Getting Started Guide](./getting-started.mdx): Getting started with Teleport server access.
+- [Getting Started Guide](./getting-started.mdx): Getting started with Teleport server access.
 
 ## Guides
 
-- [Server Access Guides (section)](./guides/): Teleport server access guides.
+- [Guides (section)](./guides/): Teleport server access guides.
 - [OpenSSH Guides (section)](./openssh/): Teleport Agentless OpenSSH integration guides.
 
 ## Configuration & management
@@ -19,4 +22,4 @@ description: Guides to protecting Linux servers with Teleport, including OpenSSH
 
 ## Troubleshooting & support
 
-- [Troubleshooting Server Access](./troubleshooting-server.mdx): Describes common issues and solutions for access to servers.
+- [Troubleshooting](./troubleshooting-server.mdx): Describes common issues and solutions for access to servers.
