--- a/docs/pages/upgrading/agent-managed-updates.mdx
+++ b/docs/pages/upgrading/agent-managed-updates.mdx
@@ -4,7 +4,7 @@ description: Describes how to set up Managed Updates (v2) for Teleport Agents
 ---
 
 <Admonition type="warning">
-This document describes Managed Updates for Agents (v2), which is gradually being rolled out to Cloud.
+This document describes Managed Updates for Agents (v2), which replaces Managed Updates v1.
 
 For Managed Updates v1 instructions, see
 [Managed Updates for Agents (v1)](./agent-managed-updates-v1.mdx).
