[v17] Update notices related to Managed Updates rollout status (#56093)
* Update agent-managed-updates.mdx

* Update agent-managed-updates-v1.mdx

--- a/docs/pages/upgrading/agent-managed-updates-v1.mdx
+++ b/docs/pages/upgrading/agent-managed-updates-v1.mdx
@@ -4,16 +4,19 @@ description: Describes how to set up Managed Updates for Teleport Agents (v1)
 ---
 
 <Admonition type="warning">
-This document describes Managed Updates for Agents (v1), which is
-currently supported but will be deprecated after [Managed Updates for
-Agents (v2)](./agent-managed-updates.mdx) is generally available.
+This document describes Managed Updates for Agents (v1), which
+is currently supported but may be removed in future versions of Teleport.
+
+For Managed Updates v2 instructions, see [Managed Updates for
+Agents (v2)](./agent-managed-updates.mdx).
 </Admonition>
 
 Managed Updates v1 uses a script called `teleport-upgrade` that is provided by
 the `teleport-ent-updater` package and configured by the `cluster_maintenance_config`
 Teleport resource. Managed Updates v2 uses a binary called `teleport-update` that is
 provided by the `teleport` package and configured by the `autoupdate_version` and
-`autoupdate_config`. The original updater and resource are described in this document.
+`autoupdate_config` resources. The original updater and resource are described in
+this document.
 
 Only Enterprise versions of Teleport can use Managed Updates v1.
 
