--- a/docs/pages/machine-workload-identity/machine-workload-identity.mdx
+++ b/docs/pages/machine-workload-identity/machine-workload-identity.mdx
@@ -32,7 +32,7 @@ Workload Identity and Machine ID can work together to create a comprehensive sec
 
 ### CI/CD pipeline with end-to-end authentication
 
-A [CI/CD system](../machine-workload-identity/machine-id/deployment/#ci/cd) securely deploys services to Kubernetes and establishes secure communication channels between them:
+A [CI/CD system](../machine-workload-identity/machine-id/deployment/deployment.mdx#cicd) securely deploys services to Kubernetes and establishes secure communication channels between them:
 
 - The pipeline authenticates through the proxy to deploy to Kubernetes and receives credentials to interact with cloud APIs (e.g., to push container images)
 - Services deployed by the pipeline receive SPIFFE identities for mutual TLS. The pipeline manages the identity lifecycle for the services it deploys
