--- a/docs/pages/enroll-resources/database-access/guides/health-checks.mdx
+++ b/docs/pages/enroll-resources/database-access/guides/health-checks.mdx
@@ -190,9 +190,7 @@ spec:
 version: v1
 ```
   
-Refer to the
-[Database Service troubleshooting
-guide](../../enroll-resources/database-access/troubleshooting.mdx) for general troubleshooting steps.
+Refer to the [Database Service troubleshooting guide](../troubleshooting.mdx) for general troubleshooting steps.
 
 ## FAQ
 
