remove conda env from example

--- a/docs/pages/enroll-resources/database-access/guides/health-checks.mdx
+++ b/docs/pages/enroll-resources/database-access/guides/health-checks.mdx
@@ -172,7 +172,7 @@ You can use `tctl` to view more information about the affected Teleport Database
 For example, the affected Database Services in the screenshot were deployed using the [Teleport AWS RDS enrollment wizard](../../../admin-guides/management/guides/awsoidc-integration-rds.mdx), which is indicated by the `teleport.dev/awsoidc-agent` label:
 
 ```code
-$ tctl get db_service/22c8ecba-69fc-4c15-b94e-e8815236b9f0                                                                                                                                (dev) 
+$ tctl get db_service/22c8ecba-69fc-4c15-b94e-e8815236b9f0
 kind: db_service
 metadata:
   expires: "2025-06-29T03:55:52Z"
