fixing link issues

--- a/docs/pages/reference/agent-services/agent_services_glossary.mdx
+++ b/docs/pages/reference/agent-services/agent_services_glossary.mdx
@@ -43,18 +43,18 @@ to specify these configuration settings.
 ```
 
 Further reading:
-- [Passwordless](../admin-guides/access-controls/guides/passwordless.mdx): More
+- [Passwordless](../../admin-guides/access-controls/guides/passwordless.mdx): More
   information about the `passwordless` authentication option.
 - [Headless
-  WebAuthn](../admin-guides/access-controls/guides/headless.mdx): The
+  WebAuthn](../../admin-guides/access-controls/guides/headless.mdx): The
   `headless` authentication option.
-- [Single Sign-On](../admin-guides/access-controls/sso/sso.mdx): Configuring SSO
+- [Single Sign-On](../../admin-guides/access-controls/sso/sso.mdx): Configuring SSO
   so you can configure Teleport to use a specific SSO authentication connector.
-- [Locking](../identity-governance/locking.mdx): Configuring the
+- [Locking](../../identity-governance/locking.mdx): Configuring the
   `locking_mode` option.
-- [Device Trust](../identity-governance/device-trust/device-trust.mdx): Configuring
+- [Device Trust](../../identity-governance/device-trust/device-trust.mdx): Configuring
   the `device_trust` section.
-- [Recording Proxy Mode](architecture/session-recording.mdx): If you configure
+- [Recording Proxy Mode](../architecture/session-recording.mdx): If you configure
   Recording Proxy Mode, consider enabling `proxy_checks_host_keys`.
 
 ### Proxy Service
@@ -80,9 +80,9 @@ These settings apply to the Teleport SSH Service:
 
 Further reading:
 - [Enhanced Session
-  Recording](../enroll-resources/server-access/guides/bpf-session-recording.mdx):
+  Recording](../../enroll-resources/server-access/guides/bpf-session-recording.mdx):
   Configuring `enhanced_recording`.
-- [PAM Integration](../enroll-resources/server-access/guides/ssh-pam.mdx):
+- [PAM Integration](../../enroll-resources/server-access/guides/ssh-pam.mdx):
   Configuring the `pam` section.
 
 ### Kubernetes Service
