--- a/docs/pages/identity-governance/device-trust/jamf-integration.mdx
+++ b/docs/pages/identity-governance/device-trust/jamf-integration.mdx
@@ -16,7 +16,7 @@ Teleport if a computer is removed from Jamf Pro.
 Syncing devices from Jamf Pro is an **inventory management** step, equivalent to
 automatically running the corresponding `tctl devices add` commands.
 
-See the [Device Trust guide](device-trust.mdx) for fundamental Device Trust concepts
+See the [Device Trust guide](../device-trust/device-trust.mdx) for fundamental Device Trust concepts
 and behavior.
 
 <details>
