--- a/docs/pages/includes/device-trust/troubleshooting.mdx
+++ b/docs/pages/includes/device-trust/troubleshooting.mdx
@@ -91,7 +91,7 @@ device web authentication ceremony failed. In this case it's likely that
 end-user IPs are not propagated correctly to your Teleport deployment.
 
 * L7 load balancer: make sure it propagates the [X-Forwarded-For header](
-  ../../reference/config.mdx#proxy-service)
+../../reference/agent-services/agent_services_glossary.mdx#proxy_service) 
 * L4 load balancer: enable [PROXY protocol](
   ../../admin-guides/management/security/proxy-protocol.mdx)
 
