--- a/docs/pages/includes/device-trust/troubleshooting.mdx
+++ b/docs/pages/includes/device-trust/troubleshooting.mdx
@@ -90,10 +90,8 @@ events.
 device web authentication ceremony failed. In this case it's likely that
 end-user IPs are not propagated correctly to your Teleport deployment.
 
-* L7 load balancer: make sure it propagates the [X-Forwarded-For header](
-../../reference/agent-services/agent_services_glossary.mdx#proxy-service) 
-* L4 load balancer: enable [PROXY protocol](
-  ../../admin-guides/management/security/proxy-protocol.mdx)
+* L7 load balancer: make sure it propagates the [X-Forwarded-For header](../../reference/config.mdx#proxy-service)
+* L4 load balancer: enable [PROXY protocol](../../admin-guides/management/security/proxy-protocol.mdx)
 
 ### Checking Device Trust authorization status in the web UI
 
