--- a/docs/pages/admin-guides/access-controls/getting-started.mdx
+++ b/docs/pages/admin-guides/access-controls/getting-started.mdx
@@ -36,6 +36,12 @@ permissions and, if not, denies the connection.
 
 ## Prerequisites
 
+This guide illustrates how to register a server with Teleport using a Docker
+container and the Teleport SSH Service in order to apply RBAC rules for
+accessing the server. While the example uses a Teleport-protected server,
+applying RBAC rules for accessing infrastructure resources works in similar ways
+for any Teleport-protected resource.
+
 (!docs/pages/includes/edition-prereqs-tabs.mdx!)
 
 - (!docs/pages/includes/tctl.mdx!)
@@ -43,10 +49,7 @@ permissions and, if not, denies the connection.
 - A Teleport user with permissions to create join tokens and other roles. We
   recommend using a demo cluster with the preset `editor` role. 
 
-- Docker installed on your workstation. 
-
-  This guide illustrates how to register a server with Teleport using a Docker
-  container and the Teleport SSH Service. Docker is only required for the local
+- Docker installed on your workstation. Docker is only required for the local
   demo environment used in this guide. You can find installation instructions
   for Docker on [Docker's website](https://docs.docker.com/get-docker/). If you
   want to register servers in Teleport without using Docker, see the getting
@@ -258,7 +261,7 @@ In this guide, you created a Teleport role that allowed and denied access to SSH
 servers based on the labels that the servers were enrolled with. Read about more
 things you can do with Teleport roles.
 
-### Refine resource labels
+### Refining resource labels
 
 Resource labeling is a crucial component of effective RBAC implementation in Teleport. Labels help you define which specific 
 resources users can access and why they need that access. Some common labels to consider using:
@@ -372,4 +375,4 @@ Document your role configurations.
 - [Add Labels to Resources](../management/admin/labels.mdx).
 - [Access Control for Servers](../../enroll-resources/server-access/rbac.mdx).
 - [Access Control for Kubernetes](../../enroll-resources/kubernetes-access/controls.mdx).
-- [Enforce Device Trust with RBAC](./device-trust/device-trust.mdx).
+- [Enforce Device Trust with RBAC](../../identity-governance/device-trust/device-trust.mdx).
