--- a/docs/pages/includes/device-trust/prereqs.mdx
+++ b/docs/pages/includes/device-trust/prereqs.mdx
@@ -17,6 +17,6 @@
 - To authenticate a Web UI session you need [Teleport Connect](
   ../../connect-your-client/teleport-connect.mdx#installation--upgrade)
 - Correct end-user IP propagation to your Teleport deployment:
-  [X-Forwarded-For header](../../reference/config.mdx#proxy-service) (L7 load
+  [X-Forwarded-For header](../../reference/agent-services/agent_services_glossary.mdx#proxy-service) (L7 load
   balancer) or [PROXY protocol](
   ../../admin-guides/management/security/proxy-protocol.mdx) (L4 load balancer)
