--- a/docs/pages/includes/database-access/auto-user-provisioning/configure-admin.mdx
+++ b/docs/pages/includes/database-access/auto-user-provisioning/configure-admin.mdx
@@ -1,4 +1,9 @@
 Teleport should be able to connect to the database as a user that can create
-other users and assign them roles. We recommend creating a separate user
-designated specifically for Teleport automatic user provisioning. Let's call it
-`teleport-admin`.
+other users and assign them roles.
+
+Choose a name for the Teleport automatic user provisioning admin: <Var name="teleport-admin"/>
+
+<Admonition type="tip">
+We recommend creating a separate user
+designated specifically for Teleport automatic user provisioning.
+</Admonition>
