--- a/docs/pages/enroll-resources/database-access/auto-user-provisioning/mongodb.mdx
+++ b/docs/pages/enroll-resources/database-access/auto-user-provisioning/mongodb.mdx
@@ -24,6 +24,8 @@ Automatic user provisioning is not compatible with MongoDB Atlas.
 
 ## Step 1/3. Configure database admin
 
+(!docs/pages/includes/database-access/auto-user-provisioning/configure-admin.mdx!)
+
 Teleport uses the same authentication mechanism (X.509) when connecting as an
 admin user as for regular user connections.
 
@@ -75,7 +77,7 @@ Now create the admin user with this role:
 
 ```code
 db.getSiblingDB("$external").runCommand({
-  createUser: "CN=teleport-admin",
+  createUser: "CN=<Var name="teleport-admin"/>",
   roles: [ { role: 'teleport-admin-role', db: 'admin' } ],
 })
 ```
