--- a/docs/pages/includes/database-access/auto-user-provisioning/db-definition-default-dbname.mdx
+++ b/docs/pages/includes/database-access/auto-user-provisioning/db-definition-default-dbname.mdx
@@ -10,7 +10,7 @@ spec:
   protocol: "{{ protocol }}"
   uri: "{{ uri }}"
   admin_user:
-    name: "teleport-admin"
+    name: "<Var name="teleport-admin"/>"
     # Optional default database the admin user logs into. Default is
     # {{ default }}, if not specified.
     # default_database: teleport
