--- a/docs/pages/includes/database-access/auto-user-provisioning/db-definition.mdx
+++ b/docs/pages/includes/database-access/auto-user-provisioning/db-definition.mdx
@@ -9,7 +9,7 @@ spec:
   protocol: "{{ protocol }}"
   uri: "{{ uri }}"
   admin_user:
-    name: "teleport-admin"
+    name: "<Var name="teleport-admin"/>"
 ```
 
 This example assumes that you have configured the database as a dynamic
